frequent products by order
======================================================
Worker/Shipper opening balance and updation of current transactions
Opening Balances update up on new finYear--can be done at any user login, create a separate thread to perform if start of a finYear
Change reports to neat tables
show worker transactions
show shipper transacions
Variant wise drill down report
Most frequently purchased product/category customer wise

select c.customerid,sum(s.quantity) as qty,p.category_id from salesInvoiceItem s,salesInvoice si,Product p,customer c where s.product_id=p.prod
uct_Id and si.salesinvoiceid=s.salesinvoiceid and c.customerid=si.customer_id  and s.financial_year='2015-2016' and  c.customerId=1 group by p.categor
y_id order by qty;

select c.customerid,sum(s.quantity),p.category_id from salesInvoiceItem s,salesInvoice si,Product p,customer c where s.product_id=p.product_Id
and si.salesinvoiceid=s.salesinvoiceid and c.customerid=si.customer_id  and s.financial_year='2015-2016' group by c.customerId,p.category_id;


Sales made per month/day/particular time frame - category wise, color/variant wise with option to chose the price range & overall (As a graph & table)

"mysql> select p.product_Name, c.category_name,sum(si.quantity),s.si_dATE from salesInvoiceitem si,Product p,salesInvoice s,category c where p.product_
id=si.product_Id and financial_year='2015-2016' and si.salesInvoiceId=s.salesInvoiceId and c.categoryid=p.category_Id group by s.si_date,p.category_id
 order by s.si_date;"
 
  
Profit made per month/day/particular time frame - category wise & overall (As a graph & table) --> profits = sales - cost
Lost sales per month/day/particular time frame --> Lost sales = Sale order - invoice, consider sale orders only that are >= invoice (As a graph & table)
No.of sarees/raw material in individual stages (cutting, finishing, dyeing etc.)
No. of sarees/raw material cut/finish,dyeing etc.per day (As a graph & table)
Graphs
Operaional Reports