@@ -1,8 +1,10 @@
 package org.erp.tarak.worker;
 
+import java.util.Calendar;
 import java.util.List;
 
 import org.hibernate.Criteria;
+import org.hibernate.Query;
 import org.hibernate.SessionFactory;
 import org.hibernate.criterion.Restrictions;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -63,5 +65,15 @@ public class WorkerDaoImpl implements WorkerDao {
 		crit.add(Restrictions.ilike("workerName", c));
 		List results = crit.list();
 		return results;
+	}
+
+	@Override
+	public List<Object[]> getWorkerTransactions(long workerId, String finYear) {
+		Query query=null;
+		String hql="select productionorderid as Id,poo_date as date,totalcost as OrderCost,0 as InvoiceCost from productionOrder where worker_id="+workerId+" union select productionInvoiceId as Id,poi_date as date,0 as OrderCost,totalCost as InvoiceCost from productionInvoice where worker_id="+workerId+" order by date;";
+		query = sessionFactory.getCurrentSession().createSQLQuery(hql).addScalar("Id").addScalar("date").addScalar("OrderCost").addScalar("InvoiceCost");
+		List results = query.list();
+		return results;
+
 	}
 }
